--- a/04_Julich_Challenges/01_Covid19_Challlenge/reference_soln.ipynb
+++ b/04_Julich_Challenges/01_Covid19_Challlenge/reference_soln.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "source": [
     "import pandas as pd\n",
     "from IPython.display import Image\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "source": [
     "import torch\n",
     "from PIL import Image\n",
@@ -133,26 +133,15 @@
     "df_train = pd.read_csv(data_dir+'train.csv')\n",
     "df_test = pd.read_csv(data_dir+'submission_valid.csv')\n",
     "train_dataset = build_dataset(df_train.sample(frac=0.1), data_dir+\"train\")\n",
-    "test_dataset = build_dataset(df_test, data_dir+\"valid\")\n",
+    "test_dataset = build_dataset(df_test.sample(frac=0.1), data_dir+\"valid\")\n",
     "len(train_dataset), len(test_dataset)"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(1392, 1547)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "batch_size = 100\n",
     "\n",
@@ -173,17 +162,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "from tqdm import tqdm\n",
     "model = torchvision.models.resnet50(pretrained=True)\n",
     "\n",
-    "def extract_features(model, dataloader, limit=1):\n",
+    "def extract_features(model, dataloader):\n",
     "    Flist = []\n",
     "    Ylist = []\n",
-    "    counter = 0\n",
     "    for X, Y in tqdm(dataloader):\n",
-    "        counter += 1\n",
     "        x = model.conv1(X)\n",
     "        x = model.bn1(x)\n",
     "        x = model.relu(x)\n",
@@ -197,7 +184,6 @@
     "        x = x.view(x.size(0), x.size(1))\n",
     "        Flist.append(x)\n",
     "        Ylist.append(Y)\n",
-    "        if counter==limit: break\n",
     "    F = torch.cat(Flist).detach().numpy()\n",
     "    Y = torch.cat(Ylist).detach().numpy()\n",
     "    return F, Y"
@@ -207,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "# resnet50 = torchvision.models.resnet50(pretrained=True)\n",
     "# resnet50\n",
@@ -220,21 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "source": [
     "%%time\n",
-    "xtrain, ytrain = extract_features(model, train_loader,100)\n",
+    "xtrain, ytrain = extract_features(model, train_loader)\n",
     "# xtest, ytest = extract_features(model, test_loader)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "  0%|          | 0/14 [00:00<?, ?it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
