--- a/04_Julich_Challenges/01_Covid19_Challlenge/solution_TrLr_FtrExn_new.ipynb
+++ b/04_Julich_Challenges/01_Covid19_Challlenge/solution_TrLr_FtrExn_new.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "source": [
     "data_dir = 'data/'\n",
     "# data_dir = 'data_subset/'\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "source": [
     "train_df_pos = train_df[train_df.label=='positive']\n",
     "train_df_neg = train_df[train_df.label=='negative']"
@@ -98,11 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "source": [
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import MaxPool2D, Flatten, Dense, Conv2D, GlobalAveragePooling2D\n",
     "from tensorflow.keras.applications import VGG16, ResNet50\n",
+    "\n",
+    "img_size = 256\n",
     "\n",
     "conv_base = VGG16(weights='imagenet', include_top=False, input_shape=(img_size, img_size, 3))\n",
     "# conv_base = ResNet50(weights='imagenet', include_top=False, input_shape=(img_size, img_size, 3))\n",
@@ -132,13 +134,13 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Model: \"sequential_9\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "vgg16 (Functional)           (None, 7, 7, 512)         14714688  \n",
+      "vgg16 (Functional)           (None, 8, 8, 512)         14714688  \n",
       "_________________________________________________________________\n",
-      "flatten_6 (Flatten)          (None, 25088)             0         \n",
+      "flatten_1 (Flatten)          (None, 32768)             0         \n",
       "=================================================================\n",
       "Total params: 14,714,688\n",
       "Trainable params: 0\n",
@@ -159,11 +161,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "source": [
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "\n",
-    "img_size = 224\n",
     "batch_size = 100\n",
     "dataAug = False\n",
     "\n",
@@ -230,13 +231,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Found 1175 validated image filenames belonging to 1 classes.\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
+      "Found 1175 validated image filenames belonging to 1 classes.\n",
       "Found 9958 validated image filenames belonging to 1 classes.\n",
       "Found 1392 validated image filenames belonging to 2 classes.\n",
       "Found 1392 validated image filenames belonging to 2 classes.\n"
@@ -250,7 +245,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 105
+     "execution_count": 8
     }
    ],
    "metadata": {}
@@ -264,10 +259,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 9,
    "source": [
     "%%time\n",
-    "processData = False\n",
+    "processData = True\n",
     "\n",
     "if processData:\n",
     "    X_train_neg, _ = feature_exactor(train_neg_datagen)\n",
@@ -304,18 +299,25 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 100/100 [05:21<00:00,  3.22s/it]\n",
-      "100%|██████████| 12/12 [00:20<00:00,  1.70s/it]\n",
-      "100%|██████████| 14/14 [00:26<00:00,  1.87s/it]\n",
-      "100%|██████████| 14/14 [00:23<00:00,  1.70s/it]\n"
+      "  0%|          | 0/100 [00:00<?, ?it/s]2021-10-12 19:54:50.631129: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcudnn.so.7\n",
+      "2021-10-12 19:54:52.438413: W tensorflow/stream_executor/gpu/asm_compiler.cc:63] Running ptxas --version returned 256\n",
+      "2021-10-12 19:54:52.491287: W tensorflow/stream_executor/gpu/redzone_allocator.cc:314] Internal: ptxas exited with non-zero error code 256, output: \n",
+      "Relying on driver to perform ptx compilation. \n",
+      "Modify $PATH to customize ptxas location.\n",
+      "This message will be only logged once.\n",
+      "2021-10-12 19:54:53.383685: I tensorflow/stream_executor/platform/default/dso_loader.cc:49] Successfully opened dynamic library libcublas.so.10\n",
+      "100%|██████████| 100/100 [07:05<00:00,  4.25s/it]\n",
+      "100%|██████████| 12/12 [01:01<00:00,  5.12s/it]\n",
+      "100%|██████████| 14/14 [01:21<00:00,  5.85s/it]\n",
+      "100%|██████████| 14/14 [00:57<00:00,  4.12s/it]\n"
      ]
     },
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 3min 39s, sys: 29 s, total: 4min 8s\n",
-      "Wall time: 6min 43s\n"
+      "CPU times: user 4min 2s, sys: 1min 10s, total: 5min 12s\n",
+      "Wall time: 10min 40s\n"
      ]
     },
     {
@@ -323,14 +325,14 @@
      "data": {
       "text/plain": [
        "(0.10554208209826642,\n",
-       " (11133, 25088),\n",
-       " (9958, 25088),\n",
-       " (1392, 25088),\n",
-       " (1392, 25088))"
+       " (11133, 32768),\n",
+       " (9958, 32768),\n",
+       " (1392, 32768),\n",
+       " (1392, 32768))"
       ]
      },
      "metadata": {},
-     "execution_count": 111
+     "execution_count": 9
     }
    ],
    "metadata": {}
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "source": [
     "def ml_metrics(ml_model):\n",
     "    \n",
@@ -376,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "source": [
     "%%time\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -389,26 +391,16 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CPU times: user 7min 48s, sys: 12.8 s, total: 8min 1s\n",
-      "Wall time: 8min 2s\n"
+      "CPU times: user 11min 10s, sys: 1min, total: 12min 10s\n",
+      "Wall time: 12min 10s\n"
      ]
-    },
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "LogisticRegression(class_weight='balanced', max_iter=5000)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 112
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "source": [
     "ml_metrics(pickle.load(open('models/featExtr_logReg_wo_DA.pkl', 'rb')))"
    ],
@@ -432,11 +424,11 @@
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.99      0.98      0.99      1213\n",
-      "         1.0       0.90      0.94      0.92       179\n",
+      "         0.0       0.99      0.99      0.99      1213\n",
+      "         1.0       0.92      0.92      0.92       179\n",
       "\n",
       "    accuracy                           0.98      1392\n",
-      "   macro avg       0.95      0.96      0.95      1392\n",
+      "   macro avg       0.95      0.95      0.95      1392\n",
       "weighted avg       0.98      0.98      0.98      1392\n",
       "\n",
       "############################## TEST ############################## \n",
@@ -444,10 +436,10 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "         0.0       0.99      0.98      0.99      1236\n",
-      "         1.0       0.87      0.92      0.90       156\n",
+      "         1.0       0.87      0.93      0.90       156\n",
       "\n",
       "    accuracy                           0.98      1392\n",
-      "   macro avg       0.93      0.95      0.94      1392\n",
+      "   macro avg       0.93      0.96      0.94      1392\n",
       "weighted avg       0.98      0.98      0.98      1392\n",
       "\n"
      ]
